kustomize/clusters/vader/database/influxdb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb

spec:
  selector:
    matchLabels:
      app: influxdb
  replicas: 1
  template:
    metadata:
      labels: 
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: docker.io/influxdb:2.0.8-alpine
          volumeMounts:
            - name: data
              mountPath: /var/lib/influxdb
          ports:
            - containerPort: 8086
              name: http
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: influxdb-data-pvc
