kustomize/clusters/vader/database/influxdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-service

spec:
  type: ClusterIP
  selector:
    app: influxdb
  ports:
    - name: http
      port: 80
      targetPort: http
