kustomize/clusters/vader/database/influxdb/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: influxdb-ingressroute
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`influxdb.feldman.in`)
      kind: Rule
      services:
        - name: influxdb-service
          port: 80
  tls:
    secretName: influxdb-feldman-in-tls
